fix: [PL-29489]: error not showing on UI when saved (#12174)
* fix: [PL-29489]: error not showing on UI when saved

* correct error message

* correct error message

--- a/src/modules/23-default-settings/components/SettingsCategorySection.module.scss
+++ b/src/modules/23-default-settings/components/SettingsCategorySection.module.scss
@@ -57,3 +57,6 @@
 .settingLabelContainer {
   width: 30%;
 }
+.settingCheckBoxContainer {
+  width: 100% !important;
+}
